overflow-fix

--- a/src/blocks/card/card.css
+++ b/src/blocks/card/card.css
@@ -1,6 +1,6 @@
 .card {
   display: grid;
-  grid-template-columns: minmax(413px, 520px) minmax(875px, 700px);
+  grid-template-columns: minmax(413px, 480px) minmax(875px, 700px);
   overflow: hidden;
   position: relative;
   justify-items: start;
