--- a/src/blocks/content/content.css
+++ b/src/blocks/content/content.css
@@ -1,5 +1,6 @@
 .content {
-  flex-direction: column;
-  align-items: center;
   display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  align-items: center;
 }
